Finalizando ações/etapas

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                        <span>PRESIDENTE</span> 
                     </div>
                     <div class="top_part_left-3">
-                        <div class="sq pisca"></div>
-                        <div class="sq"></div>
+                        <div class="numero pisca"></div>
+                        <div class="numero"></div>
                      </div>
                      <div class="top_part_left-4">
                         Nome: FULANO DE TAL<br/>
